@@ -6,6 +6,9 @@ cdebconf (0.50) UNRELEASED; urgency=low
     - Fix navigation with arrow keys in the newt frontend.  Closes: #218844.
     - Provide a better example in src/test/backup.config
     - Fix multiselect questions with the text frontend, newlines were missing.
+    - Improve prompt for select and multiselect questions with the text
+      frontend, it now displays: q to quit select, b for back, n for next page
+      As before, only relevant options are listed.  Closes: #192305.
   * Chris Tillman
     - s/debconf/cdebconf/ in man pages.
 
